--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 <a href="week1.html"><b>1</b></a>
 <a href="week2.html"><b>2</b></a>
 <a href="week3.html"><b>3</b></a>
-<a href="week4.html"><b>4P</b></a><br>
+<a href="week4.html"><b>4</b></a>
+<a href="week5.html"><b>5P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -61,43 +62,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>2465</font></td>
-    <td><font size=2>2015</font></td>
-    <td><font size=2>940</font></td>
-    <td><font size=2>685</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>2350</font></td>
-    <td><font size=2>1435</font></td>
+    <td><font size=2>3130</font></td>
+    <td><font size=2>1715</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>2</font></td></tr>
-<tr><td><font size=2>John(7)</font></td>
-    <td><font size=2>1</font></td>
+<tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1955</font></td>
-    <td><font size=2>2435</font></td>
-    <td><font size=2>1065</font></td>
-    <td><font size=2>420</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2735</font></td>
+    <td><font size=2>2635</font></td>
+    <td><font size=2>940</font></td>
+    <td><font size=2>270</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Rich(9)</font></td>
-    <td><font size=2>1</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1935</font></td>
-    <td><font size=2>2465</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2585</font></td>
+    <td><font size=2>3080</font></td>
     <td><font size=2>890</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>John(7)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2640</font></td>
+    <td><font size=2>3235</font></td>
+    <td><font size=2>1065</font></td>
+    <td><font size=2>420</font></td>
+    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>1470</font></td>
-    <td><font size=2>2365</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2085</font></td>
+    <td><font size=2>3015</font></td>
     <td><font size=2>705</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>0</font></td></tr>
@@ -109,46 +110,46 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Mike(10)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>2380</font></td>
-    <td><font size=2>1815</font></td>
-    <td><font size=2>990</font></td>
-    <td><font size=2>430</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Matthew(2)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>2035</font></td>
-    <td><font size=2>2010</font></td>
+    <td><font size=2>2785</font></td>
+    <td><font size=2>2385</font></td>
     <td><font size=2>800</font></td>
     <td><font size=2>450</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Steven(6)</font></td>
-    <td><font size=2>2</font></td>
+<tr><td><font size=2>Mike(10)</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>1225</font></td>
-    <td><font size=2>1375</font></td>
-    <td><font size=2>515</font></td>
-    <td><font size=2>340</font></td>
+    <td><font size=2>2660</font></td>
+    <td><font size=2>2595</font></td>
+    <td><font size=2>990</font></td>
+    <td><font size=2>280</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Randy(4)</font></td>
-    <td><font size=2>1</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2805</font></td>
-    <td><font size=2>2665</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>3605</font></td>
+    <td><font size=2>3350</font></td>
     <td><font size=2>1100</font></td>
     <td><font size=2>745</font></td>
-    <td><font size=2>0</font></td></tr>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Sam(8)</font></td>
-    <td><font size=2>1</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2290</font></td>
-    <td><font size=2>2330</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2910</font></td>
+    <td><font size=2>2600</font></td>
     <td><font size=2>1305</font></td>
     <td><font size=2>405</font></td>
     <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Steven(6)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1600</font></td>
+    <td><font size=2>2125</font></td>
+    <td><font size=2>515</font></td>
+    <td><font size=2>340</font></td>
+    <td><font size=2>0</font></td></tr>
 </table>
 </table>
 </body>
