--- a/week4.html
+++ b/week4.html
@@ -7,29 +7,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>75</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>30</td></tr>
 <tr><td>Mack</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Beckham</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Boyd</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Hooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hauschka</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Hooper</td>        <td></td><td align=right>65</td></tr>
+<tr><td>Hauschka</td>      <td></td><td align=right>50</td></tr>
+<tr><td>Hockenson</td>     <td></td><td align=right>50</td></tr>
+<tr><td></td>              <td></td><td align=right>270</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (8)</b></font></td></tr>
-<tr><td>Winston</td>       <td></td><td align=right>0</td></tr>
-<tr><td>DFreeman</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Ingram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gostkowski</td>    <td></td><td align=right>0</td></tr>
-<tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Winston</td>       <td></td><td align=right>295</td></tr>
+<tr><td>DFreeman</td>      <td></td><td align=right>35</td></tr>
+<tr><td>Ingram</td>        <td></td><td align=right>45</td></tr>
+<tr><td>Adams</td>         <td></td><td align=right>90</td></tr>
+<tr><td>Lockett</td>       <td></td><td align=right>25</td></tr>
+<tr><td>Engram</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Gostkowski</td>    <td></td><td align=right>25</td></tr>
+<tr><td>DJones</td>        <td></td><td align=right>80</td></tr>
+<tr><td></td>              <td></td><td align=right>620</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -37,28 +37,28 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (2)</b></font></td></tr>
 <tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Michel</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Golladay</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Graham</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Gurley</td>        <td></td><td align=right>175</td></tr>
+<tr><td>Michel</td>        <td></td><td align=right>30</td></tr>
+<tr><td>MThomas</td>       <td></td><td align=right>45</td></tr>
+<tr><td>Golladay</td>      <td></td><td align=right>180</td></tr>
+<tr><td>Graham</td>        <td></td><td align=right>105</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>85</td></tr>
+<tr><td>Slye</td>          <td></td><td align=right>130</td></tr>
+<tr><td></td>              <td></td><td align=right>750</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (6)</b></font></td></tr>
-<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>180</td></tr>
+<tr><td>Fournette</td>     <td></td><td align=right>110</td></tr>
+<tr><td>Carson</td>        <td></td><td align=right>50</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>DRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gonzalez</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Gonzalez</td>      <td></td><td align=right>35</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>375</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>KJohnson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>265</td></tr>
+<tr><td>KJohnson</td>      <td></td><td align=right>60</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>185</td></tr>
 <tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>50</td></tr>
+<tr><td>Ertz</td>          <td></td><td align=right>30</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>55</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>135</td></tr>
+<tr><td></td>              <td></td><td align=right>780</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (10)</b></font></td></tr>
-<tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DJohnson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Watson</td>        <td></td><td align=right>50</td></tr>
+<tr><td>DJohnson</td>      <td></td><td align=right>45</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>50</td></tr>
+<tr><td>JJones</td>        <td></td><td align=right>25</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Olsen</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Crosby</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Sanders</td>       <td></td><td align=right>35</td></tr>
+<tr><td></td>              <td></td><td align=right>280</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (4)</b></font></td></tr>
-<tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Stafford</td>      <td></td><td align=right>170</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>135</td></tr>
+<tr><td>Cook</td>          <td></td><td align=right>50</td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>160</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>40</td></tr>
+<tr><td>Lutz</td>          <td></td><td align=right>130</td></tr>
+<tr><td>Gay</td>           <td></td><td align=right>115</td></tr>
+<tr><td></td>              <td></td><td align=right>800</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (7)</b></font></td></tr>
-<tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gallman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Shepherd</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Wilson</td>        <td></td><td align=right>85</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>140</td></tr>
+<tr><td>Gallman</td>       <td></td><td align=right>180</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>165</td></tr>
+<tr><td>Shepard</td>       <td></td><td align=right>35</td></tr>
 <tr><td>VDavis</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Rosas</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Rosas</td>         <td></td><td align=right>45</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>35</td></tr>
+<tr><td></td>              <td></td><td align=right>685</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hyde</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>200</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>50</td></tr>
+<tr><td>Hyde</td>          <td></td><td align=right>25</td></tr>
 <tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
-<tr><td>Landry</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Dissly</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Minshew</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Landry</td>        <td></td><td align=right>80</td></tr>
+<tr><td>Dissly</td>        <td></td><td align=right>100</td></tr>
+<tr><td>Fairbairn</td>     <td></td><td align=right>35</td></tr>
+<tr><td>Minshew</td>       <td></td><td align=right>125</td></tr>
+<tr><td></td>              <td></td><td align=right>615</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (9)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Cooks</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>30</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>30</td></tr>
+<tr><td>Chubb</td>         <td></td><td align=right>430</td></tr>
+<tr><td>Cooks</td>         <td></td><td align=right>35</td></tr>
 <tr><td>MBrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Zuerlein</td>      <td></td><td align=right>125</td></tr>
 <tr><td>Hardman</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>650</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -166,43 +166,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>2465</font></td>
-    <td><font size=2>2015</font></td>
-    <td><font size=2>940</font></td>
-    <td><font size=2>685</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>2350</font></td>
-    <td><font size=2>1435</font></td>
+    <td><font size=2>3130</font></td>
+    <td><font size=2>1715</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>2</font></td></tr>
-<tr><td><font size=2>John(7)</font></td>
-    <td><font size=2>1</font></td>
+<tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1955</font></td>
-    <td><font size=2>2435</font></td>
-    <td><font size=2>1065</font></td>
-    <td><font size=2>420</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2735</font></td>
+    <td><font size=2>2635</font></td>
+    <td><font size=2>940</font></td>
+    <td><font size=2>270</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Rich(9)</font></td>
-    <td><font size=2>1</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1935</font></td>
-    <td><font size=2>2465</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2585</font></td>
+    <td><font size=2>3080</font></td>
     <td><font size=2>890</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>John(7)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2640</font></td>
+    <td><font size=2>3235</font></td>
+    <td><font size=2>1065</font></td>
+    <td><font size=2>420</font></td>
+    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>1470</font></td>
-    <td><font size=2>2365</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2085</font></td>
+    <td><font size=2>3015</font></td>
     <td><font size=2>705</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>0</font></td></tr>
@@ -214,44 +214,44 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Mike(10)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>2380</font></td>
-    <td><font size=2>1815</font></td>
-    <td><font size=2>990</font></td>
-    <td><font size=2>430</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Matthew(2)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>2035</font></td>
-    <td><font size=2>2010</font></td>
+    <td><font size=2>2785</font></td>
+    <td><font size=2>2385</font></td>
     <td><font size=2>800</font></td>
     <td><font size=2>450</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Steven(6)</font></td>
-    <td><font size=2>2</font></td>
+<tr><td><font size=2>Mike(10)</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>1225</font></td>
-    <td><font size=2>1375</font></td>
-    <td><font size=2>515</font></td>
-    <td><font size=2>340</font></td>
+    <td><font size=2>2660</font></td>
+    <td><font size=2>2595</font></td>
+    <td><font size=2>990</font></td>
+    <td><font size=2>280</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Randy(4)</font></td>
-    <td><font size=2>1</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2805</font></td>
-    <td><font size=2>2665</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>3605</font></td>
+    <td><font size=2>3350</font></td>
     <td><font size=2>1100</font></td>
     <td><font size=2>745</font></td>
-    <td><font size=2>0</font></td></tr>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Sam(8)</font></td>
-    <td><font size=2>1</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2290</font></td>
-    <td><font size=2>2330</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2910</font></td>
+    <td><font size=2>2600</font></td>
     <td><font size=2>1305</font></td>
     <td><font size=2>405</font></td>
     <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Steven(6)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1600</font></td>
+    <td><font size=2>2125</font></td>
+    <td><font size=2>515</font></td>
+    <td><font size=2>340</font></td>
+    <td><font size=2>0</font></td></tr>
 </table>
