--- a/pickups.html
+++ b/pickups.html
@@ -151,15 +151,15 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Ronald Jones/Kalen Ballage</td>
+<td width=50>10/1</td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>DJ Chark/Adrian Peterson</td>
+<td width=50>10/1</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
@@ -215,8 +215,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jacoby Brissett/Darwin Thompson</td>
+<td width=50>10/1</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -267,8 +267,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Dawson Knox/Jordan Reed</td>
+<td width=50>10/1</td>
 </tr></table></td>
 </tr>
 <tr>
