--- a/roster.html
+++ b/roster.html
@@ -128,13 +128,13 @@
 <tr><td>LAC</td><td>Melvin Gordon          </td></tr>
 <tr><td> SF</td><td>Tevin Coleman          </td></tr>
 <tr><td> NO</td><td>Latavius Murray        </td></tr>
-<tr><td>WAS</td><td>Adrian Peterson        </td></tr>
 <tr><td> KC</td><td>Carlos Hyde            </td></tr>
 <tr><td> KC</td><td>Darrel Williams        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>JuJu Smith-Schuster    </td></tr>
 <tr><td> NE</td><td>Julian Edelman         </td></tr>
 <tr><td>CLE</td><td>Jarvis Landry          </td></tr>
+<tr><td>JAX</td><td>DJ Chark               </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>OAK</td><td>Darren Waller          </td></tr>
 <tr><td>SEA</td><td>Will Dissly            </td></tr>
@@ -155,7 +155,7 @@
 <tr><td>JAX</td><td>Leonard Fournette      </td></tr>
 <tr><td>SEA</td><td>Chris Carson           </td></tr>
 <tr><td>LAC</td><td>Justin Jackson         </td></tr>
-<tr><td>MIA</td><td>Kalen Ballage          </td></tr>
+<tr><td> TB</td><td>Ronald Jones           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>DeAndre Hopkins        </td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
@@ -208,6 +208,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Sam (8)</b></font></td></tr>
 <tr><td> TB</td><td>Jameis Winston         </td></tr>
+<tr><td>IND</td><td>Jacoby Brissett        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Le'Veon Bell           </td></tr>
 <tr><td>ATL</td><td>Devonta Freeman        </td></tr>
@@ -227,7 +228,6 @@
 <tr><td> NE</td><td>Stephen Gostkowski     </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>Austin Seibert         </td></tr>
-<tr><td> KC</td><td>Darwin Thompson        </td></tr>
 <tr><td>NYG</td><td>Daniel Jones           </td></tr>
 <tr><td>PIT</td><td>Diontae Johnson        </td></tr>
 </table>
@@ -280,7 +280,6 @@
 <tr><td>CIN</td><td>AJ Green               </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Greg Olsen             </td></tr>
-<tr><td>WAS</td><td>Jordan Reed            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Mason Crosby           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -288,6 +287,7 @@
 <tr><td>CIN</td><td>Damion Willis          </td></tr>
 <tr><td>DEN</td><td>Drew Lock              </td></tr>
 <tr><td>BUF</td><td>Tommy Sweeney          </td></tr>
+<tr><td>BUF</td><td>Dawson Knox            </td></tr>
 </table>
 </td>
 <td>
