--- a/week5.html
+++ b/week5.html
@@ -21,7 +21,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (4)</b></font></td></tr>
-<tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Cousins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
@@ -101,7 +101,7 @@
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>DRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gonzalez</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -110,12 +110,12 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (8)</b></font></td></tr>
 <tr><td>Winston</td>       <td></td><td align=right>0</td></tr>
-<tr><td>DFreeman</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Ingram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
+<tr><td>DJohnson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gostkowski</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Seibert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
