--- a/pickups.html
+++ b/pickups.html
@@ -18,8 +18,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Mike Nugent/Noah Fant</td>
+<td width=50>10/3</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
