--- a/roster.html
+++ b/roster.html
@@ -24,9 +24,9 @@
 <tr><td>ATL</td><td>Austin Hooper          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Steven Hauschka        </td></tr>
+<tr><td> NE</td><td>Mike Nugent            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>TJ Hockenson           </td></tr>
-<tr><td>DEN</td><td>Noah Fant              </td></tr>
 <tr><td>BAL</td><td>Miles Boykin           </td></tr>
 <tr><td> NE</td><td>Jakobi Meyers          </td></tr>
 <tr><td>OAK</td><td>Hunter Renfrow         </td></tr>
